alignment fix back button

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,31 +19,6 @@ body {
 	overflow-x: hidden;
 }
 
-// Navbar
-header {
-	display: none;
-	&.active {
-		display: block;
-	}
-	position: fixed;
-	width: 100%;
-	background-color: rgba(22, 21, 21, 0.1);
-	padding: 1.5rem 0;
-
-	nav {
-		ul {
-			display: flex;
-			justify-content: space-evenly;
-			li {
-				list-style: none;
-				&:hover {
-					color: white;
-				}
-			}
-		}
-	}
-}
-
 .home-screen {
 	height: 100vh;
 	width: 100%;
@@ -181,10 +156,11 @@ header {
 }
 .project-tile-screen {
 	.back-button {
-		margin-top: 2rem;
+		position: absolute;
+		top: 1rem;
 	}
 	.grid-container {
-		padding: 1rem 0 4rem 0;
+		padding: 6rem 0 4rem 0;
 		display: flex;
 		flex-direction: column;
 		.tile {
